rename and update model analyzer script and yaml values.
Signed-off-by: Brandon Tuttle <tuttlebr@ncc-1701.biz>

--- a/workspace/sweep.yaml
+++ b/workspace/sweep.yaml
@@ -2,6 +2,7 @@ model_repository: "/ft_workspace/triton-model-store/t5"
 override_output_model_repository: true
 output_model_repository_path: "/ft_workspace/model_analyzer_results"
 export_path: "/ft_workspace/model_analyzer_results"
+checkpoint_directory: "/ft_workspace/model_analyzer_results/checkpoints"
 profile_models:
   fastertransformer:
     model_config_parameters:
